# HttpServer

./: .gitignore  BindingSocket.cpp  BindingSocket.hpp  CMakeLists.txt  ConnectingSocket.cpp  ConnectingSocket.hpp  README.md  SimpleSocket.cpp  SimpleSocket.hpp  SingleFileHttpServer.cpp  SingleFileHttpServer.hpp  _Deprecated_Makefile  hdelibc.cpp  hdelibc.hpp  main.cpp  test.txt  test2.txt
Redis/: RedisMainServer.cpp  RedisMainServer.hpp  RedisProtocolParser.cpp  RedisProtocolParser.hpp  RedisProtocolSerializer.cpp  RedisProtocolSerializer.hpp
Servers/: MultiClientServer.cpp  MultiClientServer.hpp  ServerObject.hpp  SimpleServer.cpp  SimpleServer.hpp  TestServer.cpp  TestServer.hpp
Sockets/: BindingSocket.cpp  BindingSocket.hpp  ConnectingSocket.cpp  ListeningSocket.cpp  ListeningSocket.hpp  SimpleSocket.cpp  SimpleSocket.hpp
Utilities/: Utils.cpp  Utils.hpp
